add build.sbt